# avi-ide

./: .editorconfig  .gitignore  LICENSE  README.md  build-packages.sh  build.sh  changelog.md  meson.build  meson_options.txt  package-lock.json  package.json  update.sh
.github/workflows/: pr_ci.yml  release.yml  rolling.yml
data/compat/: module.lua
data/core/: cli.lua  command.lua  config.lua  emptyview.lua  font_nonicons.lua  init.lua  repl.lua  rootview.lua  start.lua
data/core/commands/: core.lua
data/plugins/: autorestart.lua  autosave.lua  autosaveonfocuslost.lua  constdata_edit.lua  editor.lua  entity_edit.lua  intent_edit.lua  ipc.lua  lang_edit.lua  language_avi.lua  language_yaml.lua  manifest_edit.lua  nonicons.lua  scale.lua  settings.lua  settings_edit.lua  treeview.lua
data/plugins/lsp/: server.lua
docs/: README.md
docs/api/: globals.lua  process.lua  system.lua
lsp/server/: tsconfig.tsbuildinfo
lsp/server/src/: server.ts
lsp/server/src/completion/: builtins.ts  completion.ts
lsp/server/src/completion/providers/: builtins.ts  currentFile.ts  scope.ts  utils.ts  workspace.ts
resources/: README.md
resources/cross/: unknown-wasm32.txt
resources/icons/: icon.icns
resources/include/: studio_plugin_api.h
resources/linux/: dev.avi.Studio.appdata.xml  dev.avi.Studio.desktop
resources/macos/: Info.plist.in
resources/portable/: README.md
resources/windows/: avi-studio.exe.manifest.in  manifest.rc
scripts/: README.md  appdmg.sh  appimage.sh  build.sh  common.sh  generate_header.sh  install-dependencies.sh  make-universal-binaries.sh  package.sh  repackage.sh  run-local
scripts/innosetup/: innosetup.iss.in  innosetup.sh
scripts/keymap-generator/: keymap-generator.lua
scripts/lua/: README.md  pgo.lua
src/: main.c  main_com.c  meson.build  rencache.c  rencache.h  renderer.c  renderer.h  renwindow.c
src/api/: api.c  renderer.c  renwindow.c  system.c  thread.c
src/api/utils/: lxlauxlib.c
